--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>IS183 Midterm</title>
+    <title>Sai Aung Ko Ko IS183 Midterm</title>
 </head>
 <body>
     <!-- html comment -->
